collapse large list of URIs fixes: #35
Collapse from the 6th URI if there are more than 10 affected elements.

--- a/html_client/FAIR_validator.css
+++ b/html_client/FAIR_validator.css
@@ -361,3 +361,9 @@ footer{
   left: -6px;
   top: 80px;
 }
+
+
+[aria-expanded="false"] > .expanded,
+[aria-expanded="true"] > .collapsed {
+  display: none;
+}
